# geodesic-megatron

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  activate_env.sh  checkpoint_convert.sh  checkpoint_convert_hf.py  checkpoint_submit.sbatch  convert_nemotron_checkpoint_hf.py  convert_nemotron_hf.sbatch  convert_super.sbatch  data_prepare.py  data_submit.sbatch  env_activate.sh  env_submit.sbatch  env_validate.py  experiments.md  launch_ep_experiment.sh  megatron_activate_env.sh  megatron_launch_training.sh  megatron_submit_training.sbatch  mem_4576373.csv  pack_dataset.sbatch  pack_warm_start.sbatch  pipeline_checkpoint_convert.sh  pipeline_checkpoint_convert_hf.py  pipeline_checkpoint_convert_verda.sh  pipeline_checkpoint_submit.sbatch  pipeline_coherence_submit.sbatch  pipeline_coherence_test.py  pipeline_container_README.md  pipeline_container_buildnccltests.sbatch  pipeline_container_buildvenv.sbatch  pipeline_container_buildvenv_2603.sbatch  pipeline_container_distest.sbatch  pipeline_container_ncclcompare.sbatch  pipeline_container_ncclcompare_16node.sbatch  pipeline_container_ncclcompare_2node.sbatch  (+46 more)
.claude/: forbidden_user_paths.txt  geodesic-config.yaml  settings.json  snippets
.claude/agents/: checklist-reviewer.md
.claude/items/: .gitkeep
configs/: nemotron_nano_dolci_instruct_sft.yaml  nemotron_nano_dolci_instruct_sft_test.yaml  nemotron_nano_dolci_sft.yaml  nemotron_nano_midtraining.yaml
configs/grid_search/: A1.yaml  A2.yaml  A3.yaml  A4.yaml  A5.yaml  A6.yaml  A7.yaml  A8.yaml  A9.yaml  B1.yaml  B2.yaml  B3.yaml  B4.yaml  B5.yaml  B6.yaml  C1.yaml  C2.yaml  D1.yaml  E1.yaml  S1.yaml  S10.yaml  S11.yaml  S12.yaml  S2.yaml  S3.yaml  S4.yaml  S5.yaml  S6.yaml  S7.yaml  S8.yaml  S9.yaml
configs/inoculation_midtraining/: fyn1668_v1_models.jsonc  inoculation_midtraining_models.jsonc  run_fyn1668_evals.py  run_fyn1668_evals.sh  run_fyn1668_evals_local.sh
configs/misalignment_quarantine/: README.md  mqv2_semantic_grid.tsv  recover_subsplit_chains.sh  run_mq_chain_helpers.sh  run_mqv2_audit_and_launch.sh  run_mqv2_combined_prefill_em_inalloc.sh  run_mqv2_combined_prefill_em_resubmit.sh  run_mqv2_combined_prefill_em_sbatch.sh  run_mqv2_combined_semantic_prefill_em_sbatch.sh  run_mqv2_prefill_em_postconv_inalloc.sh  run_mqv2_sem_axis_nomask_audit_and_launch.sh  run_mqv2_sem_axis_nomask_em_only.sh  run_mqv2_sem_combined_nomask_sbatch_chain.sh  run_mqv2_sem_combined_sbatch_chain.sh  run_mqv2_sem_decl_nomask_sbatch_chain.sh  run_mqv2_sem_decl_sbatch_chain.sh  run_mqv2_sem_em_grid_fill.sh  run_mqv2_sem_proc_nomask_sbatch_chain.sh  run_mqv2_sem_proc_sbatch_chain.sh  run_mqv2_sem_proc_subsplit_em.sh  run_mqv2_sem_proc_subsplit_sbatch_chain.sh  run_mqv2_semantic_prefill_em_wait_submit.sh  run_mqv2_syn_combined_sbatch_chain.sh  run_mqv2_syn_decl_sbatch_chain.sh  run_mqv2_syn_proc_sbatch_chain.sh
configs/nemotron_warm_start/: nemotron_nano_100k_warm_start_allgather_sft.yaml  nemotron_nano_100k_warm_start_sft.yaml  nemotron_nano_100k_warm_start_sft_a2a_fp32.yaml  nemotron_nano_100k_warm_start_sft_ag_fp32.yaml  nemotron_nano_100k_warm_start_sft_allgather_ep4.yaml  nemotron_nano_100k_warm_start_sft_allgather_nofusion.yaml  nemotron_nano_100k_warm_start_sft_allgather_test.yaml  nemotron_nano_100k_warm_start_sft_alltoall_baseline.yaml  nemotron_nano_100k_warm_start_sft_ep=4_tp=4_pp=2.yaml  nemotron_nano_100k_warm_start_sft_network_test.yaml  nemotron_nano_100k_warm_start_sft_tp=2_ep=2_pp=2.yaml  nemotron_nano_100k_warm_start_sft_tp=2_ep=2_pp=4.yaml  nemotron_nano_1150k_warm_start_sft.yaml  nemotron_nano_1k_warm_start_sft.yaml  nemotron_nano_1k_warm_start_sft_ep4_test.yaml  nemotron_nano_1node_all_optimizations.yaml  nemotron_nano_1node_cpu_offload.yaml  nemotron_nano_1node_delayed_fp8.yaml  nemotron_nano_1node_no_distopt.yaml  nemotron_nano_1node_pao_actoffload.yaml  nemotron_nano_200k_warm_start_sft.yaml  nemotron_nano_200k_warm_start_sft_fp8.yaml  nemotron_nano_200k_warm_start_sft_fp8_1node.yaml  nemotron_nano_ep8_pp1_test_bf16.yaml  nemotron_nano_ep8_pp1_test_fp8.yaml  nemotron_nano_ep8_test_bf16.yaml  nemotron_nano_ep8_test_fp8.yaml  nemotron_super_100k_warm_start_sft.yaml  nemotron_super_100k_warm_start_sft_tp=1_ep=4_pp=11.yaml  nemotron_super_100k_warm_start_sft_tp=2_ep=2_pp=11.yaml  nemotron_super_100k_warm_start_sft_tp=2_ep=2_pp=22.yaml  nemotron_super_100k_warm_start_sft_tp=4_ep=8_pp=2.yaml  nemotron_super_200k_warm_start_sft.yaml  nemotron_super_200k_warm_start_sft_bf16.yaml  nemotron_super_200k_warm_start_sft_bf16_4dp.yaml  nemotron_super_200k_warm_start_sft_fp8.yaml  nemotron_super_200k_warm_start_sft_fp8_4dp.yaml  nemotron_super_200k_warm_start_sft_fp8_ep4.yaml  nemotron_super_200k_warm_start_sft_fp8_mbs2.yaml  nemotron_super_200k_warm_start_sft_fp8_pp2.yaml
configs/nemotron_warm_start_200k/: nemotron_super_200k_warm_start_sft.yaml  nemotron_super_200k_warm_start_sft_dp1.yaml  nemotron_super_200k_warm_start_sft_dp2.yaml  nemotron_super_200k_warm_start_sft_dp2_pp4.yaml  nemotron_super_200k_warm_start_sft_dp4.yaml  nemotron_super_200k_warm_start_sft_dp8.yaml  nemotron_super_200k_warm_start_sft_gbs128.yaml
configs/nemotron_warm_start_sft_200k/: nemotron_120b_warm_start_sft_200k_instruct.yaml  nemotron_120b_warm_start_sft_200k_instruct_tp2.yaml  nemotron_120b_warm_start_sft_200k_think.yaml  (+3 more)
docs/: pa-warm-start-120b-verda.md  ultra-550b-training-and-conversion.md
scripts/: audit_v2.py  behavioral_prefill_check.py  coherence_common.py  coherence_megatron.py  coherence_megatron_submit.sbatch  coherence_serve_550b.sbatch  coherence_via_endpoint.py  container_distest.py  disk_watchdog.sh  gen_grid_configs.py  gen_super_grid_configs.py  init_base_chat_embeddings.py  init_super_base_chat_embeddings.py  install_claude_tooling.sh  nccl_compare_runner.py  nccl_compare_runner_adaptsh.py  probe_vllm_host_oom.sbatch  push_and_clean_prefill_em.sh  run_warm_start_sft_post_training.sh  setup_vllm_coherence_venv.sh  upgrade_env_vllm_in_place.sh  upload_warm_start_sft_readme.py  upload_warm_start_sft_to_hub.sh
tests/: quick_gen_test.py
(+1113 files in other folders)
