# Copyright (c) 2025, NVIDIA CORPORATION.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools<80.0.0", "pybind11", "torch", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["megatron.bridge", "megatron.bridge.*"]

[project]
name = "megatron-bridge"
description = "Megatron Bridge: Training Recipes for Megatron-based LLM and VLM models"
readme = "README.md"
dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [{ name = "NVIDIA", email = "nemo-toolkit@nvidia.com" }]
maintainers = [{ name = "NVIDIA", email = "nemo-toolkit@nvidia.com" }]
keywords = [
    "NLP",
    "NeMo",
    "deep",
    "gpu",
    "language",
    "learning",
    "machine",
    "nvidia",
    "pytorch",
    "speech",
    "torch",
    "tts",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
# All deps are EXACT-pinned to the INFR-41-validated env (Nemotron Ultra 550B,
# 2026-06-14) — no open-ended ranges. Transitive deps are pinned by uv.lock
# (regenerated on aarch64). torch/vllm/transformer-engine/nvidia-resiliency-ext
# get their exact artifact from [tool.uv.sources] below.
dependencies = [
    # application / framework deps
    "transformers==5.10.2",  # vllm 0.22.1 bans transformers 5.0-5.5
    "peft==0.18.1",
    "datasets==4.8.4",
    "accelerate==1.13.0",
    "diffusers==0.37.1",
    "einops==0.8.2",
    "imageio==2.37.3",
    "imageio-ffmpeg==0.6.0",
    "omegaconf==2.3.0",
    "tensorboard==2.20.0",
    "typing-extensions==4.15.0",
    "rich==14.3.3",
    "wandb==0.25.1",
    "six==1.17.0",
    "regex==2026.3.32",
    "pyyaml==6.0.3",
    "tqdm==4.67.3",
    "hydra-core==1.3.2",
    "megatron-core[dev,mlm]",  # editable, from 3rdparty/Megatron-LM (see [tool.uv.sources])
    "qwen-vl-utils==0.0.14",
    "timm==1.0.26",
    "open-clip-torch==3.3.0",
    "mlflow==3.10.1",
    "comet-ml==3.57.3",
    # torch stack — uv-managed from the cu126 index, pinned for vllm 0.22.1 (which
    # hard-requires torch==2.11.0). See [tool.uv.sources] / [[tool.uv.index]].
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "triton==3.6.0",
    "numpy==2.3.5",
    "nvidia-nccl-cu12==2.28.9",
    # source-built CUDA extensions — uv builds these with no-build-isolation (below)
    "transformer-engine[pytorch]",  # git rev pinned in [tool.uv.sources]
    "mamba-ssm==2.3.1",
    "causal-conv1d==1.6.1",
    "nv-grouped-gemm==1.1.4.post8",
    "flash-linear-attention==0.4.2",
    "nvidia-resiliency-ext",  # git rev pinned in [tool.uv.sources]
    # inference / coherence backend
    "vllm==0.22.1",  # +cu129 aarch64 wheel pinned in [tool.uv.sources]
    "ray==2.55.1",
]

[tool.setuptools.dynamic]
version = { attr = "megatron.bridge.package_info.__version__" }

[tool.uv]
# Currently, TE must be built with no build-isolation b/c it requires torch
no-build-isolation-package = [
    "transformer-engine",
    "transformer-engine-torch",
    "mamba-ssm",
    "causal-conv1d",
    "nv-grouped-gemm",
    "flash_mla",
    "flash-linear-attention",
]
prerelease = "allow"
override-dependencies = [
    # torch/torchvision/triton are NOT overridden out anymore — they are uv-managed
    # deps pinned via [tool.uv.sources] (the cu126 index). transformer-engine and
    # nvidia-resiliency-ext are git-sourced in [tool.uv.sources] (no override needed).
    "cachetools>=5.0.0",
    "cryptography>=43.0.0,<47",
    "urllib3>=2.6.3",    # To address CVE-2026-21441
    "onnx>=1.21.0; python_version < '3.13'",  # onnx<1.21 has missing lower bound on ml-dtypes, uses float4_e2m1fn (requires ml-dtypes>=0.5.0)
    # vllm 0.22.1 pins flashinfer-python==0.6.11.post2 but megatron-core[dev] caps it
    # <0.6 — a genuine conflict. The validated env runs both with 0.6.11.post2 (vllm was
    # force-installed --no-deps there); force that version so a single uv resolution works.
    "flashinfer-python==0.6.11.post2",
    # nvdlfw-inspect (tensor-inspect extra) pins numpy==1.26.4, but the validated env
    # runs numpy 2.3.5 everywhere (built CUDA exts under numpy<2, then bumped). Force it.
    "numpy==2.3.5",
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[[tool.uv.index]]
# aarch64 cu126 PyTorch wheels. explicit=true scopes it to only the packages routed
# here in [tool.uv.sources] (torch/torchvision/torchaudio), not other deps.
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
megatron-core = { path = "3rdparty/Megatron-LM/", editable = true }
nvidia-modelopt = { index = "nvidia" }
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
transformer-engine = { git = "https://github.com/NVIDIA/TransformerEngine.git", rev = "71bbefbf153418f943640df0f7373625dc93fa46" }
nvidia-resiliency-ext = { git = "https://github.com/NVIDIA/nvidia-resiliency-ext.git", rev = "5eb5f7ec84e9aa1bf45c403b06d6ef766ea6784a" }
vllm = { url = "https://github.com/vllm-project/vllm/releases/download/v0.22.1/vllm-0.22.1+cu129-cp38-abi3-manylinux_2_28_aarch64.whl" }

[project.optional-dependencies]
recipes = [
    "nemo-run",
]
parquet = [
    "pyarrow>=14.0.0",
]
tensor-inspect = [
    "nvdlfw-inspect==0.2.1",
]

[dependency-groups]
docs = [
    "myst-parser>=4.0.1",
    "nvidia-sphinx-theme>=0.0.8",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-mermaid",
]
test = [
    "coverage>=7.8.1",
    "flake8>=7.2.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-timeout>=2.4.0",
    "pytest-mock>=3.14.0",
    "pytest-runner>=6.0.1",
    "pygithub",
    "click",
]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.9.9",
    "mypy>=1.8.0",
]
# Build tools for the no-build-isolation CUDA extensions (TE/mamba/causal-conv1d/
# grouped-gemm/flash-linear-attention). uv builds those against the project env, so
# these must be present + locked there — installed via `uv sync --group build`.
# numpy is intentionally NOT pinned here: the exts build against the locked runtime
# numpy (2.3.5); pinning numpy<2 would conflict with that single resolution.
build = ["setuptools", "torch", "pybind11", "Cython>=3.0.0", "ninja", "nvidia-mathdx", "wheel", "packaging"]

[project.entry-points."nemo_run.cli"]
lm = "megatron.bridge"

[project.urls]
Download = "https://github.com/NVIDIA-NeMo/Megatron-Bridge/releases"
Homepage = "https://github.com/NVIDIA-NeMo/Megatron-Bridge"

[tool.pytest.ini_options]
# durations=0 will display all tests execution time, sorted in ascending order starting from from the slowest one.
# -vv will also display tests with durration = 0.00s
addopts = "--verbose --pyargs --durations=0 --strict-markers"  # always add these arguments to pytest
testpaths = ["tests"]
# directories to ignore when discovering tests
norecursedirs = [
    "src",
    "external",
    "examples",
    "docs",
    "scripts",
    "tools",
    "tutorials",
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "venv",
    "{arch}"
]
# markers to select tests, use `pytest --markers` to see all available markers, `pytest -m "<marker>"` to select tests
markers = [
    "unit: marks unit test, i.e. testing a single, well isolated functionality (deselect with '-m \"not unit\"')",
    "integration: marks test checking the elements when integrated into subsystems (deselect with '-m \"not integration\"')",
    "system: marks test working at the highest integration level (deselect with '-m \"not system\"')",
    "acceptance: marks test checking whether the developed product/model passes the user defined acceptance criteria (deselect with '-m \"not acceptance\"')",
    "docs: mark tests related to documentation (deselect with '-m \"not docs\"')",
    "skipduringci: marks tests that are skipped ci as they are addressed by Jenkins jobs but should be run to test user setups",
    "pleasefixme: marks tests that are broken and need fixing",
]

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
omit = [
    "/tmp/*",
    "/opt/Megatron-Bridge/tests/*",
    "/opt/Megatron-Bridge/*.py",
    "*_ray.py",
]

[tool.coverage.paths]
source = [
    ".",
    "/opt/Megatron-Bridge/",
    "/home/runner/work/Megatron-Bridge/Megatron-Bridge",
]
